Fix squished look for generated pages

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -61,6 +61,7 @@ $mark-bg: #e8f5ff;
 iframe {
   border: 0;
   width: 100%;
+  margin: 0 auto;
 }
 
 .conference-card {
